Fix nav button on mobile

--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -96,6 +96,9 @@ header
         button
             @include button(transparent, $coral, 138, 48, 16)
 
+            @media only screen and (max-width: 991px)
+                margin: 0 0 20px 15px
+
         .navbar-toggler
             @include button($white, $white, 48, 48, 14)
             padding: 0
